# pippin

./: pyproject.toml
.github/workflows/: ci.yml
github/workflows/: release.yml
tests/: test_release_workflow.py
